logs/pd.imalyzer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pd'...
Listing './lib/python3.5/site-packages/pd/imalyzer'...
Compiling './lib/python3.5/site-packages/pd/imalyzer/cluster.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/cluster.py", line 45
    print "cluster №",num
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/imalyzer/imalyzer.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/imalyzer.py", line 31
    except KernelValue,(kernel,) :
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/imalyzer/kernel.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/kernel.py", line 38
    raise KernelValue,(nodes,)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/imalyzer/libimalyzer.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/libimalyzer.py", line 16
    print "Load:",driver.name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/imalyzer/orphan.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/orphan.py", line 38
    raise KernelValue,(nodes,)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/imalyzer/suborphan.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/suborphan.py", line 35
    print "Check",sys.argv[1],"node on orphaned nodes after delete"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/imalyzer/subtree.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/subtree.py", line 36
    print "Check",sys.argv[1],"node on orphaned nodes after delete"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/imalyzer/subtrees.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/subtrees.py", line 51
    print "Tree №",num
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/imalyzer/subtrees_div.py'...
***   File "./lib/python3.5/site-packages/pd/imalyzer/subtrees_div.py", line 74
    print key,values.finish
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pd.imalyzer-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
